# MA_Felix_Rittler

./: .gitignore  Cargo.toml  LICENSE  README.md
autoencoder/: .gitattributes  .gitignore  Autoencoder.py  AutoencoderSmallImages.py  AutoencoderSmallerImages.py  AutoencoderSmallerImages3Channels.py  GuiImageDataset.py  README.md  check_autoencoder_results.py  create_dataset.py  create_large_dataset.py  dataset_creation.ipynb  dataset_creation_big.ipynb  performance_test.py  requirements.txt  stichprobe.ipynb  test_autoencoder.py  test_performance.py  torch_service.py  train_autoencoder.ipynb  train_autoencoder.py
jadx_mock/: .gitignore  Cargo.toml  README.md  generate_data.sh  generate_data_linux.sh  rustfmt.toml
jadx_mock/src/: generator_constants.rs  jadx.rs  main.rs  mock_data_generator.rs  randomized_jadx_starter.rs  screen_capture.rs
jadx_mock/src/assets/theme/: colors.ron  theme.ron
jadx_mock/src/components/: about.rs  editor_tab_navigation_mock.rs  mod.rs  preferences.rs  project_tree.rs  project_tree_widget.rs  rename_dialogue.rs  search_result_table.rs  text_search.rs  toolbar.rs  top_menu.rs  usage_search.rs
jadx_mock/src/elements/: custom_checkbox.rs  custom_combo_box.rs  image_button.rs  mod.rs  project_node_description.rs  project_tree_element.rs  search_result_table_entry.rs  small_numeric_box.rs  structured_item_box.rs  top_menu_entry.rs
jadx_mock/src/generator/: constants.rs  mock_data_generator.rs  mod.rs
thesis_sources/: .gitignore  AusgabenExp2_1.pdf_tex  AusgabenExp2_2.pdf_tex  AusgabenExp3_1.pdf_tex  AusgabenExp3_2.pdf_tex  arch1.pdf_tex  (+10 more)
(+44 files in other folders)
