[package]
name = "rust-orb-test"
version = "0.1.0"
authors = ["Felix Rittler <felix.rittler@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
 orbtk = { git = "https://github.com/redox-os/orbtk.git", branch= "develop" }
# orbtk = "0.3.1-alpha3"
# image = "0.23.14"
serde = "1.0.106"
serde_derive = "1.0.106"
