[package]
name = "rust-orb-test"
version = "0.1.0"
authors = ["Felix Rittler <felix.rittler@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orbtk = { git = "https://github.com/redox-os/orbtk.git", branch= "develop" }
rust_decimal = "1.7"
rand = "0.8.4"
scrap = "0.5"
image = "*"
